made some small changes

--- a/about.html
+++ b/about.html
@@ -94,9 +94,7 @@
             </div>
             <div class="col-lg-6 d-none d-md-block photo-content">
               <img
-                src="
-https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/580/original/Untitled_design.png?1703842530"
-                class="img-fluid rounded profile"
+                src="./src/images/picture.png"     class="img-fluid rounded profile"
                 alt=""
               />
             </div>
