--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="./">Home</a>
+            <a class="nav-link" aria-current="page" href="./">Home</a>
             <a class="nav-link" href="./about.html">About</a>
             <a class="nav-link" href="./projects.html">Projects</a>
             <a class="nav-link" href="./Contact.html">Contact</a>
