--- a/projects.html
+++ b/projects.html
@@ -27,12 +27,18 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="src/about.css" />
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="src/projects.css" />
 
     <title>Responsive personal portofolio</title>
   </head>
@@ -63,7 +69,94 @@
       </div>
     </nav>
 
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- Main Section - Swapper -->
+    <main>
+      <section class="projects section" id="projects">
+        <div class="container-box">
+          <h2 class="header">My Work:</h2>
+          <div class="projects-container swiper">
+            <div class="swiper-wrapper">
+              <!-- project 1 -->
+
+              <div class="projects-content swiper-slide">
+                <img
+                  src="./src/images/my-work/project-1.png"
+                  class="project-image"
+                  alt="projects image"
+                />
+                <div>
+                  <span class="project-subtitle">Html | Css | Bootstrap</span>
+
+                  <h1 class="project-title">Travel Destination Page</h1>
+                  <a href="#" class="project-button"
+                    >View demo <i class="bx bx-right-arrow-alt"></i
+                  ></a>
+                </div>
+              </div>
+
+              <!-- project 2 -->
+              <div class="projects-content swiper-slide">
+                <img
+                  src="./src/images/my-work/project-2.png"
+                  class="project-image"
+                  alt="projects image"
+                />
+                <div>
+                  <span class="project-subtitle">Html | Css | Bootstrap</span>
+
+                  <h1 class="project-title">Monument Landing Page</h1>
+                  <a href="#" class="project-button"
+                    >View demo <i class="bx bx-right-arrow-alt"></i
+                  ></a>
+                </div>
+              </div>
+
+              <!-- project 3 -->
+              <div class="projects-content swiper-slide">
+                <img
+                  src="./src/images/my-work/project-3.png"
+                  class="project-image"
+                  alt="projects image"
+                />
+                <div>
+                  <span class="project-subtitle">Html | Css | Bootstrap</span>
+
+                  <h1 class="project-title">Portofolio Project</h1>
+                  <a href="#" class="project-button"
+                    >View demo <i class="bx bx-right-arrow-alt"></i
+                  ></a>
+                </div>
+              </div>
+
+              <!-- project 4 -->
+              <div class="projects-content swiper-slide">
+                <img
+                  src="./src/images/my-work/project-4.png"
+                  class="project-image"
+                  alt="projects image"
+                />
+                <div>
+                  <span class="project-subtitle">Html | Css | JavaScript</span>
+
+                  <h1 class="project-title">Weather Application</h1>
+                  <a href="#" class="project-button"
+                    >View demo <i class="bx bx-right-arrow-alt"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <!-- Swipper arrows -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+
+            <!-- Swipper pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- JavaScript -->
     <script src="src/java.js"></script>
   </body>
 </html>
