added all the required links for the projects, the third section and the footer

--- a/projects.html
+++ b/projects.html
@@ -88,9 +88,20 @@
                   <span class="project-subtitle">Html | Css | Bootstrap</span>
 
                   <h1 class="project-title">Travel Destination Page</h1>
-                  <a href="#" class="project-button"
+                  <a
+                    href="https://travel-destination-project.vercel.app/"
+                    class="project-button"
+                    target="blank"
                     >View demo <i class="bx bx-right-arrow-alt"></i
                   ></a>
+                  <div class="mt-2 github">
+                    <a
+                      href="https://github.com/NadiasCodes/Responsive-Add-On-Project"
+                      target="_blank"
+                      class="project-button"
+                      >GitHub <i class="bx bxl-github"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
 
@@ -105,9 +116,20 @@
                   <span class="project-subtitle">Html | Css | Bootstrap</span>
 
                   <h1 class="project-title">Monument Landing Page</h1>
-                  <a href="#" class="project-button"
+                  <a
+                    href="https://monument-landing-page.vercel.app/"
+                    class="project-button"
+                    target="_blank"
                     >View demo <i class="bx bx-right-arrow-alt"></i
                   ></a>
+                  <div class="mt-2 github">
+                    <a
+                      href="https://github.com/NadiasCodes/Monument--Landing-Page"
+                      target="_blank"
+                      class="project-button"
+                      >GitHub <i class="bx bxl-github"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
 
@@ -122,9 +144,19 @@
                   <span class="project-subtitle">Html | Css | Bootstrap</span>
 
                   <h1 class="project-title">Portofolio Project</h1>
-                  <a href="#" class="project-button"
+                  <a
+                    href="https://my-portofolio-project.vercel.app/"
+                    class="project-button" target="_blank"
                     >View demo <i class="bx bx-right-arrow-alt"></i
                   ></a>
+                  <div class="mt-2 github">
+                    <a
+                      href="https://github.com/NadiasCodes/Responsive--Portofolio-Project"
+                      target="_blank"
+                      class="project-button"
+                      >GitHub <i class="bx bxl-github"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
 
@@ -139,9 +171,19 @@
                   <span class="project-subtitle">Html | Css | JavaScript</span>
 
                   <h1 class="project-title">Weather Application</h1>
-                  <a href="#" class="project-button"
+                  <a
+                    href="https://vanilla-weather-search-gold.vercel.app/"
+                    class="project-button" target="_blank"
                     >View demo <i class="bx bx-right-arrow-alt"></i
                   ></a>
+                  <div class="mt-2 github">
+                    <a
+                      href="https://github.com/NadiasCodes/Vanilla-Weather-Search"
+                      target="_blank"
+                      class="project-button"
+                      >GitHub <i class="bx bxl-github"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -154,8 +196,40 @@
           </div>
         </div>
       </section>
-    </main>
 
+      <!-- Second-section -->
+      <section>
+        <div class="container-box">
+          <h2 class="header">What i am working on:</h2>
+        </div>
+      </section>
+    </main>
+ <!-- Footer -->
+    <footer>
+      <div class="container-box">
+        <div class="d-flex justify-content-center">
+          <a
+            href="https://github.com/NadiasCodes"
+            target="_blank"
+            title="Github Profile"
+            ><i class="bx bxl-github social-links"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/nadia-bouli/"
+            target="_blank"
+            title="Linkedin"
+            ><i class="bx bxl-linkedin social-links"></i
+          ></a>
+          <a href="" target="_blank" title="Resume"
+            ><i class="bx bxs-file-pdf social-links"></i
+          ></a>
+        </div>
+      </div>
+
+      <a href="mailto:De.Nadia@outlook.com"
+        ><h4 class="email">De.Nadia@outlook.com</h4></a
+      >
+    </footer>
     <!-- JavaScript -->
     <script src="src/java.js"></script>
   </body>
