added media queries for the swiper

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Nadia Bouli</a>
+        <a class="navbar-brand" href="./">Nadia Bouli</a>
         <button
           class="navbar-toggler"
           type="button"
