--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Nadia Bouli</a>
+        <a class="navbar-brand" href="./">Nadia Bouli</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -54,7 +54,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="./">Home</a>
+            <a class="nav-link" href="./">Home</a>
             <a class="nav-link" href="./about.html">About</a>
             <a class="nav-link" href="./projects.html">Projects</a>
             <a class="nav-link" href="./Contact.html">Contact</a>
