adjusting the swiper

--- a/projects.html
+++ b/projects.html
@@ -200,7 +200,7 @@
       <!-- Second-section -->
       <section>
         <div class="container-box">
-          <h2 class="header">What i am working on:</h2>
+          <h2 class="header">Currently working on:</h2>
         </div>
       </section>
     </main>
