added and modified the skill sections

--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
       </div>
     </nav>
 
-    <!-- Main Section - Swapper -->
+    <!-- Main Section - Swipper -->
     <main>
       <section class="projects section" id="projects">
         <div class="container-box">
@@ -81,7 +81,7 @@
               <div class="projects-content swiper-slide">
                 <img
                   src="./src/images/my-work/project-1.png"
-                  class="project-image"
+                  class="project-image-swipper"
                   alt="projects image"
                 />
                 <div>
@@ -109,7 +109,7 @@
               <div class="projects-content swiper-slide">
                 <img
                   src="./src/images/my-work/project-2.png"
-                  class="project-image"
+                  class="project-image-swipper"
                   alt="projects image"
                 />
                 <div>
@@ -137,7 +137,7 @@
               <div class="projects-content swiper-slide">
                 <img
                   src="./src/images/my-work/project-3.png"
-                  class="project-image"
+                  class="project-image-swipper"
                   alt="projects image"
                 />
                 <div>
@@ -146,7 +146,8 @@
                   <h1 class="project-title">Portofolio Project</h1>
                   <a
                     href="https://my-portofolio-project.vercel.app/"
-                    class="project-button" target="_blank"
+                    class="project-button"
+                    target="_blank"
                     >View demo <i class="bx bx-right-arrow-alt"></i
                   ></a>
                   <div class="mt-2 github">
@@ -164,7 +165,7 @@
               <div class="projects-content swiper-slide">
                 <img
                   src="./src/images/my-work/project-4.png"
-                  class="project-image"
+                  class="project-image-swipper"
                   alt="projects image"
                 />
                 <div>
@@ -173,7 +174,8 @@
                   <h1 class="project-title">Weather Application</h1>
                   <a
                     href="https://vanilla-weather-search-gold.vercel.app/"
-                    class="project-button" target="_blank"
+                    class="project-button"
+                    target="_blank"
                     >View demo <i class="bx bx-right-arrow-alt"></i
                   ></a>
                   <div class="mt-2 github">
@@ -187,8 +189,8 @@
                 </div>
               </div>
             </div>
-           
-           <!-- Swipper pagination -->
+
+            <!-- Swipper pagination -->
             <div class="swiper-pagination"></div>
           </div>
         </div>
@@ -199,9 +201,49 @@
         <div class="container-box">
           <h2 class="header">Currently working on:</h2>
         </div>
+
+        <div class="container mt-5 text-center">
+          <div class="row">
+            <div class="col-lg-6 col-sm-12">
+              <div class="background-image">
+                <img
+                  src="./src/images/certificate.png"
+                  alt="certificate-image"
+                  class="project-image"
+                  d-none
+                  d-lg-block
+                />
+              </div>
+              <p class="project-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Necessitatibus, laudantium omnis voluptates nesciunt asperiores
+                at ut enim, officia, sunt ullam fugiat? Voluptatum aspernatur
+                sapiente libero fuga eum saepe, deserunt sint.
+              </p>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+              <div class="background-image">
+                <img
+                  src="./src/images/projects.png"
+                  alt="certificate-image"
+                 class="project-image" 
+                  d-none
+                  d-lg-block
+                />
+              </div>
+              <p class="project-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Necessitatibus, laudantium omnis voluptates nesciunt asperiores
+                at ut enim, officia, sunt ullam fugiat? Voluptatum aspernatur
+                sapiente libero fuga eum saepe, deserunt sint.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
- <!-- Footer -->
+
+    <!-- Footer -->
     <footer>
       <div class="container-box">
         <div class="d-flex justify-content-center">
@@ -227,6 +269,7 @@
         ><h4 class="email">De.Nadia@outlook.com</h4></a
       >
     </footer>
+
     <!-- JavaScript -->
     <script src="src/java.js"></script>
   </body>
