--- a/about.html
+++ b/about.html
@@ -108,37 +108,46 @@
       <section class="container-box container text-center">
         <h2 class="header text-center">Skills:</h2>
         <div class="row mt-5">
-          <div class="col-lg-3 mb-4">
+          <div class="col-lg mb-4">
             <i class="bx bxl-html5 icon-skill"></i>
-            <p class="icon-skill-text">Html</p>
+            <p class="icon-skill-text">Html5</p>
           </div>
-          <div class="col-lg-3 mb-4">
+          
+          <div class="col-lg mb-4">
             <i class="bx bxl-css3 icon-skill"></i>
             <p class="icon-skill-text">Css3</p>
           </div>
-          <div class="col-lg-3 mb-4">
+          <div class="col-lg mb-4">
             <i class="bx bxl-javascript icon-skill"></i>
             <p class="icon-skill-text">JavaScript</p>
           </div>
-          <div class="col-lg-3 mb-4">
+          <div class="col-lg mb-4">
             <i class="bx bxl-react icon-skill"></i>
             <p class="icon-skill-text">React</p>
           </div>
+           <div class="col-lg mb-4">
+            <i class='bx bxl-visual-studio icon-skill'></i>
+            <p class="icon-skill-text">Visual Studio</p>
+          </div>
         </div>
         <div class="row mt-4">
-          <div class="col-lg-3 mb-4">
-            <i class="bx bxs-invader icon-skill"></i>
-            <p class="icon-skill-text">AI</p>
+          <div class="col-lg mb-4">
+            <i class='bx bx-images icon-skill'></i>
+            <p class="icon-skill-text">Canva, Figma & inVision</p>
           </div>
-          <div class="col-lg-3 mb-4">
+          <div class="col-lg mb-4">
             <i class="bx bx-devices icon-skill"></i>
             <p class="icon-skill-text">Responsive</p>
           </div>
-          <div class="col-lg-3 mb-4">
+          <div class="col-lg mb-4">
             <i class="bx bx-network-chart icon-skill"></i>
             <p class="icon-skill-text">API's</p>
           </div>
-          <div class="col-lg-3 mb-4">
+           <div class="col-lg mb-4">
+           <i class='bx bxl-bootstrap icon-skill'></i>
+            <p class="icon-skill-text">Bootstrap</p>
+          </div>
+          <div class="col-lg mb-4">
             <i class="bx bxl-github icon-skill"></i>
             <p class="icon-skill-text">GitHub</p>
           </div>
