added the last section and styled it in css

--- a/projects.html
+++ b/projects.html
@@ -205,37 +205,72 @@
         <div class="container mt-5 text-center">
           <div class="row">
             <div class="col-lg-6 col-sm-12">
-              <div class="background-image">
+              <div class="background-image d-none d-lg-block">
                 <img
                   src="./src/images/certificate.png"
                   alt="certificate-image"
-                  class="project-image"
-                  d-none
-                  d-lg-block
+                  class="project-image d-none d-lg-block"
                 />
               </div>
-              <p class="project-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Necessitatibus, laudantium omnis voluptates nesciunt asperiores
-                at ut enim, officia, sunt ullam fugiat? Voluptatum aspernatur
-                sapiente libero fuga eum saepe, deserunt sint.
+              <p class="project-description mt-3">
+                Continuously expanding my coding skills by pursuing
+                certifications in frontend development.I'm dedicated to
+                furthering my knowledge and proficiency in coding through
+                various resources, aiming for a comprehensive skill set to excel
+                in future roles within the tech industry.
+              </p>
+
+              <p class="mt-2">
+                <span class="sources">Sources</span>:
+                <a
+                  href="https://www.udemy.com/"
+                  target="_blank"
+                  class="sources-text"
+                  >Udemy,</a
+                >
+                <a
+                  href="https://www.freecodecamp.org/learn/"
+                  target="_blank"
+                  class="sources-text"
+                  >Freecodecamp,</a
+                >
+                <a
+                  href="https://codedamn.com/learn/reactjs-projects"
+                  target="_blank"
+                  class="sources-text"
+                  >Codedamn</a
+                >
               </p>
             </div>
             <div class="col-lg-6 col-sm-12">
-              <div class="background-image">
+              <div class="background-image d-none d-lg-block">
                 <img
                   src="./src/images/projects.png"
                   alt="certificate-image"
-                 class="project-image" 
-                  d-none
-                  d-lg-block
+                  class="project-image d-none d-lg-block"
                 />
               </div>
-              <p class="project-description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Necessitatibus, laudantium omnis voluptates nesciunt asperiores
-                at ut enim, officia, sunt ullam fugiat? Voluptatum aspernatur
-                sapiente libero fuga eum saepe, deserunt sint.
+              <p class="project-description mt-3">
+                Dedicated to honing my skills, I am actively engaged in building
+                a diverse range of projects. From a multitude of resources
+                including YouTube tutorials and platforms like Frontend Mentor
+                and SheCodes montly
+                <a
+                  href="https://www.shecodes.io/challenges"
+                  target="_blank"
+                  style="color: #b29d8c"
+                  >challenges</a
+                >. I continuously strive to perfect my abilities. With each
+                endeavor, I aim to not only strengthen my existing skills but
+                also explore new concepts and technologies.
+              </p>
+
+              <p class="mt-2">
+                <span class="sources">Future Projects:</span>
+                <span class="future-project-ideas-details"
+                  >Netflix & Amazon clone, Flower Store, Tea Store, <br />
+                  Japanese Restaurant, Clothing Store, Travel Agency & more.
+                </span>
               </p>
             </div>
           </div>
