adjusted images and texts for smaller screens

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -102,7 +105,7 @@
                 <img
                   src="/src/images/project-files/weather-application.png"
                   alt=" Weather-application-react"
-                  class="project-image d-none d-lg-block"
+                  class="project-image d-none d-md-block"
                 />
               </div>
               <p class="project-description">
@@ -131,7 +134,7 @@
                 <img
                   src="/src/images/project-files/quote-generator.png"
                   alt=""
-                  class="project-image d-none d-lg-block"
+                  class="project-image d-none d-md-block"
                 />
               </div>
               <p class="project-description">
@@ -163,7 +166,7 @@
                 <img
                   src="/src/images/project-files/dictionary-app.png "
                   alt=""
-                  class="project-image d-none d-lg-block"
+                  class="project-image d-none d-md-block"
                 />
               </div>
               <p class="project-description">
@@ -192,7 +195,7 @@
                 <img
                   src="/src/images/project-files/world-clock-app.png"
                   alt="world-clock-app"
-                  class="project-image d-none d-lg-block"
+                  class="project-image d-none d-md-block"
                 />
               </div>
               <p class="project-description">
