correcting typos and grammar

--- a/about.html
+++ b/about.html
@@ -75,26 +75,29 @@
                 <h2 class="mb-3 front-end">Junior Front-End developer</h2>
                 <p class="mb-4 details-paragraph">
                   Enthusiastic & dedicated junior front-end developer with a
-                  strong foundation in HTML, CSS, JavaScript, and ReactJS. Eager
-                  to contribute my skills in creating visually appealing and
-                  user-friendly web experiences. Always pay attention to details
-                  and make sure that my code is clean. Passionate about learning
-                  and improving.
+                  strong foundation in HTML, CSS, JavaScript, and ReactJS.<br />
+                  Eager to contribute my skills in creating visually appealing
+                  and user-friendly web experiences. Always pay attention to
+                  details and make sure that my code is clean. Passionate about
+                  learning and improving.
                   <br />
                   <br />
                   I mainly like to pursue personal coding projects in my free
-                  time. With whatever time is left (often not much) i love going
+                  time. With whatever time is left (often not much) I love going
                   for walks, exercising, watching series, reading books &
                   playing video games. Lastly, I have a deep love for plants.
                   It's not just a hobby; it's a joyful commitment and
                   dedication.
                 </p>
-                <a href="./projects.html" class="main-button">View my projects</a>
+                <a href="./projects.html" class="main-button"
+                  >View my projects</a
+                >
               </div>
             </div>
             <div class="col-lg-6 d-none d-md-block photo-content">
               <img
-                src="./src/images/picture.png"     class="img-fluid rounded profile"
+                src="./src/images/picture.png"
+                class="img-fluid rounded profile"
                 alt=""
               />
             </div>
@@ -112,7 +115,7 @@
             <i class="bx bxl-html5 icon-skill"></i>
             <p class="icon-skill-text">Html5</p>
           </div>
-          
+
           <div class="col-lg mb-4">
             <i class="bx bxl-css3 icon-skill"></i>
             <p class="icon-skill-text">Css3</p>
@@ -125,14 +128,14 @@
             <i class="bx bxl-react icon-skill"></i>
             <p class="icon-skill-text">React</p>
           </div>
-           <div class="col-lg mb-4">
-            <i class='bx bxl-visual-studio icon-skill'></i>
+          <div class="col-lg mb-4">
+            <i class="bx bxl-visual-studio icon-skill"></i>
             <p class="icon-skill-text">Visual Studio</p>
           </div>
         </div>
         <div class="row mt-4">
           <div class="col-lg mb-4">
-            <i class='bx bx-images icon-skill'></i>
+            <i class="bx bx-images icon-skill"></i>
             <p class="icon-skill-text">Canva, Figma & inVision</p>
           </div>
           <div class="col-lg mb-4">
@@ -143,8 +146,8 @@
             <i class="bx bx-network-chart icon-skill"></i>
             <p class="icon-skill-text">API's</p>
           </div>
-           <div class="col-lg mb-4">
-           <i class='bx bxl-bootstrap icon-skill'></i>
+          <div class="col-lg mb-4">
+            <i class="bx bxl-bootstrap icon-skill"></i>
             <p class="icon-skill-text">Bootstrap</p>
           </div>
           <div class="col-lg mb-4">
@@ -173,7 +176,8 @@
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <img
-              src="./src/images/certificates/Introduction to Coding.png" class="certificate-image"
+              src="./src/images/certificates/Introduction to Coding.png"
+              class="certificate-image"
               alt="shecodes basics"
             />
           </div>
@@ -190,7 +194,8 @@
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <img
-              src="./src/images/certificates/Introduction to web development.png" class="certificate-image"
+              src="./src/images/certificates/Introduction to web development.png"
+              class="certificate-image"
               alt="SheCodes Basics Add-on"
             />
           </div>
@@ -209,7 +214,11 @@
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/Web Development.png" class="certificate-image" alt="SheCodes Plus" />
+            <img
+              src="./src/images/certificates/Web Development.png"
+              class="certificate-image"
+              alt="SheCodes Plus"
+            />
           </div>
         </div>
         <div class="achievements">
@@ -225,7 +234,8 @@
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <img
-              src="./src/images/certificates/Advanced web development.png" class="certificate-image"
+              src="./src/images/certificates/Advanced web development.png"
+              class="certificate-image"
               alt="SheCodes Plus Add-on"
             />
           </div>
@@ -245,7 +255,11 @@
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/AI Add-On-png.png" class="certificate-image" alt="SheCodes AI Add-on" />
+            <img
+              src="./src/images/certificates/AI Add-On-png.png"
+              class="certificate-image"
+              alt="SheCodes AI Add-on"
+            />
           </div>
         </div>
         <div class="achievements">
@@ -258,7 +272,11 @@
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/responsive.png" class="certificate-image" alt="SheCodes Responsive" />
+            <img
+              src="./src/images/certificates/responsive.png"
+              class="certificate-image"
+              alt="SheCodes Responsive"
+            />
           </div>
         </div>
         <div class="achievements">
@@ -273,7 +291,8 @@
           </div>
           <div class="col-lg-6 d-none d-lg-block">
             <img
-              src="./src/images/certificates/Advanced responsive web development.jpg" class="certificate-image"
+              src="./src/images/certificates/Advanced responsive web development.jpg"
+              class="certificate-image"
               alt="SheCodes Responsive Add-on"
             />
           </div>
@@ -283,12 +302,16 @@
             <h3 class="mb-4 title-achiev">SheCodes React</h3>
             <p class="achiev-text">
               SheCodes React is ideal for those looking to become professional
-              developers. You’ll become familiar with the high-in-demand React
+              developers. You will become familiar with the high-in-demand React
               framework.
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/React.png" class="certificate-image" alt="SheCodes React" />
+            <img
+              src="./src/images/certificates/React.png"
+              class="certificate-image"
+              alt="SheCodes React"
+            />
           </div>
         </div>
         <div class="achievements">
@@ -303,7 +326,11 @@
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/React-Add-On.png"  class="certificate-image" alt="SheCodes React Add-on" />
+            <img
+              src="./src/images/certificates/React-Add-On.png"
+              class="certificate-image"
+              alt="SheCodes React Add-on"
+            />
           </div>
         </div>
         <div class="achievements">
@@ -319,7 +346,8 @@
           </div>
           <div class="col-6 d-none d-lg-block">
             <img
-              src="./src/images/certificates/front-end-developerpng.png" class="certificate-image"
+              src="./src/images/certificates/front-end-developerpng.png"
+              class="certificate-image"
               alt="Graduation"
             />
           </div>
@@ -340,7 +368,11 @@
             </p>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./src/images/certificates/codedamn-react .png" class="certificate-image" alt="Learn ReactJS" />
+            <img
+              src="./src/images/certificates/codedamn-react .png"
+              class="certificate-image"
+              alt="Learn ReactJS"
+            />
           </div>
         </div>
         <h2 class="header text-center">Forever Learning</h2>
