--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 />
               </div>
               <p class="project-description">
-                Utilizing HTML, CSS, React and API, i've created and designed a
+                Utilizing HTML, CSS, React and API, I've created and designed a
                 weather app, which gives you the current weather details in a
                 user-friendly design. You can check forecasts effortlessly and
                 plan your day hassle-free with accurate information on
@@ -138,7 +138,7 @@
                 />
               </div>
               <p class="project-description">
-                The AI book quote generator, is an application which I developed
+                The AI book quote generator, is an application I developed
                 with HTML, CSS, JavaScript and API. This unique tool provides
                 quotes from a diverse range of books. In a user-friendly
                 interface, making it a delightful resource for book enthusiasts
@@ -170,7 +170,7 @@
                 />
               </div>
               <p class="project-description">
-                The dictionary app is a user-friendly tool, that i developed
+                The dictionary app is a user-friendly tool, I developed
                 with HTML, CSS and React. It helps the users to look up
                 definitions of words. The interface is very user-friendly and
                 the app's responsive design ensures compatibility across various
