--- a/projects.html
+++ b/projects.html
@@ -254,22 +254,22 @@
                 Dedicated to honing my skills, I am actively engaged in building
                 a diverse range of projects. From a multitude of resources
                 including YouTube tutorials and platforms like Frontend Mentor
-                and SheCodes montly
+                and SheCodes monthly
                 <a
                   href="https://www.shecodes.io/challenges"
                   target="_blank"
                   style="color: #b29d8c"
                   >challenges</a
                 >. I continuously strive to perfect my abilities. With each
-                endeavor, I aim to not only strengthen my existing skills but
+                endeavor, I aim not only to strengthen my existing skills but
                 also explore new concepts and technologies.
               </p>
 
               <p class="mt-2">
                 <span class="sources">Future Projects:</span>
                 <span class="future-project-ideas-details"
-                  >Netflix & Amazon clone, Flower Store, Tea Store, <br />
-                  Japanese Restaurant, Clothing Store, Travel Agency & more.
+                  >Netflix & Amazon clone, Flower Store, Tea Store, <br/>Clothing Store, Japanese
+                  Restaurant, Travel Agency & more.
                 </span>
               </p>
             </div>
