finished the contact page and fixing errors

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     ></script>
     <link rel="stylesheet" href="src/about.css" />
 
-    <title>Responsive personal portofolio</title>
+    <title>Responsive personal portfolio</title>
   </head>
   <body>
     <!-- Navigation -->
@@ -66,7 +66,7 @@
     <!-- Main Section -->
     <main>
       <section class="container-box">
-        <h2 class="header">About Me:</h2>
+        <h2 class="header">About Me</h2>
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
@@ -160,7 +160,7 @@
 
     <!-- Third section - Achievements -->
     <main>
-      <h2 class="header text-center">Achievements:</h2>
+      <h2 class="header text-center">Achievements</h2>
       <section class="container-box">
         <div class="achievements">
           <div class="details">
