--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     ></script>
     <link rel="stylesheet" href="src/index.css" />
 
-    <title>Responsive personal portofolio</title>
+    <title>Responsive personal portfolio</title>
   </head>
   <body>
     <!-- Navigation -->
