--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="src/projects.css" />
 
-    <title>Responsive personal portofolio</title>
+    <title>Responsive personal portfolio</title>
   </head>
   <body>
     <!-- Navigation -->
@@ -73,7 +73,7 @@
     <main>
       <section class="projects section" id="projects">
         <div class="container-box">
-          <h2 class="header">My Work:</h2>
+          <h2 class="header">My Work</h2>
           <div class="projects-container swiper">
             <div class="swiper-wrapper">
               <!-- project 1 -->
@@ -143,7 +143,7 @@
                 <div>
                   <span class="project-subtitle">Html | Css | Bootstrap</span>
 
-                  <h1 class="project-title">Portofolio Project</h1>
+                  <h1 class="project-title">Portfolio Project</h1>
                   <a
                     href="https://my-portofolio-project.vercel.app/"
                     class="project-button"
@@ -199,7 +199,7 @@
       <!-- Second-section -->
       <section>
         <div class="container-box">
-          <h2 class="header">Currently working on:</h2>
+          <h2 class="header">Currently working on</h2>
         </div>
 
         <div class="container mt-5 text-center">
