added scroll reveal!

--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
-      rel="stylesheet"
-    />
-    <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
@@ -31,11 +27,22 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="src/index.css" />
 
     <title>Responsive personal portfolio</title>
@@ -89,16 +96,15 @@
             </div>
           </div>
           <h2 class="h2-subheader">•Take a look at my favorite Projects•</h2>
-          <h5 class="text-center mt-3">
+          <h5 class="text-center mt-3 links-title">
             Links available for GitHub repository and a live demo of each
             project.
           </h5>
-          <hr />
         </div>
       </section>
       <!-- Secondary Section -->
       <section>
-        <div class="container text-center">
+        <div class="container text-center images-reveal">
           <div class="row mb-5">
             <div class="col-lg-6 col-sm-12">
               <div class="background-image">
@@ -138,11 +144,11 @@
                 />
               </div>
               <p class="project-description">
-                The AI book quote generator, is an application I developed
-                with HTML, CSS, JavaScript and API. This unique tool provides
-                quotes from a diverse range of books. In a user-friendly
-                interface, making it a delightful resource for book enthusiasts
-                and seekers of insightful words!
+                The AI book quote generator, is an application I developed with
+                HTML, CSS, JavaScript and API. This unique tool provides quotes
+                from a diverse range of books. In a user-friendly interface,
+                making it a delightful resource for book enthusiasts and seekers
+                of insightful words!
               </p>
               <div class="d-flex justify-content-center">
                 <a
@@ -170,11 +176,10 @@
                 />
               </div>
               <p class="project-description">
-                The dictionary app is a user-friendly tool, I developed
-                with HTML, CSS and React. It helps the users to look up
-                definitions of words. The interface is very user-friendly and
-                the app's responsive design ensures compatibility across various
-                devices!
+                The dictionary app is a user-friendly tool, I developed with
+                HTML, CSS and React. It helps the users to look up definitions
+                of words. The interface is very user-friendly and the app's
+                responsive design ensures compatibility across various devices!
               </p>
               <div class="d-flex justify-content-center">
                 <a
@@ -254,7 +259,6 @@
 
     <!-- JavaScript -->
 
-    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="src/java.js"></script>
   </body>
 </html>
