--- a/projects.html
+++ b/projects.html
@@ -36,9 +36,11 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="src/projects.css" />
+
 
     <title>Responsive personal portfolio</title>
   </head>
@@ -76,6 +78,7 @@
           <h2 class="header">My Work</h2>
           <div class="projects-container swiper">
             <div class="swiper-wrapper">
+              
               <!-- project 1 -->
 
               <div class="projects-content swiper-slide">
@@ -202,7 +205,7 @@
           <h2 class="header">Currently working on</h2>
         </div>
 
-        <div class="container mt-5 text-center">
+        <div class="container mt-5 text-center swiper">
           <div class="row">
             <div class="col-lg-6 col-sm-12">
               <div class="background-image d-none d-lg-block">
