--- a/about.html
+++ b/about.html
@@ -27,13 +27,23 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="src/about.css" />
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="stylesheet" href="src/about.css" />
     <title>Responsive personal portfolio</title>
   </head>
   <body>
@@ -108,7 +118,7 @@
 
     <!-- Second section - Skills -->
     <main>
-      <section class="container-box container text-center">
+      <section class="container-box container text-center skills-reveal">
         <h2 class="header text-center">Skills:</h2>
         <div class="row mt-5">
           <div class="col-lg mb-4">
@@ -408,7 +418,6 @@
 
     <!-- Java -->
 
-    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="src/java.js"></script>
   </body>
 </html>
