added it in projects page as well

--- a/projects.html
+++ b/projects.html
@@ -36,11 +36,10 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="src/projects.css" />
-
 
     <title>Responsive personal portfolio</title>
   </head>
@@ -78,7 +77,6 @@
           <h2 class="header">My Work</h2>
           <div class="projects-container swiper">
             <div class="swiper-wrapper">
-              
               <!-- project 1 -->
 
               <div class="projects-content swiper-slide">
@@ -271,8 +269,9 @@
               <p class="mt-2">
                 <span class="sources">Future Projects:</span>
                 <span class="future-project-ideas-details"
-                  >Netflix & Amazon clone, Flower Store, Tea Store, <br/>Clothing Store, Japanese
-                  Restaurant, Travel Agency & more.
+                  >Netflix & Amazon clone, Flower Store, Tea Store,
+                  <br />Clothing Store, Japanese Restaurant, Travel Agency &
+                  more.
                 </span>
               </p>
             </div>
