--- a/Contact.html
+++ b/Contact.html
@@ -27,11 +27,22 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="src/contact.css" />
 
     <title>Responsive personal portfolio</title>
@@ -82,7 +93,7 @@
         <div class="contact-links">
           <h5 class="contact-links-h5">. All available links down below .</h5>
 
-          <i class="bx bxs-chevrons-down bx-fade-up mt-4"></i>
+          <i class="bx bxs-chevrons-down arrow-reveal"></i>
         </div>
       </section>
     </main>
@@ -114,8 +125,6 @@
     </footer>
 
     <!-- Java -->
-
-    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="src/java.js"></script>
   </body>
 </html>
