--- a/about.html
+++ b/about.html
@@ -81,11 +81,11 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="main-content">
-                <h1 class="mb-4 title">Hi, i am Nadia</h1>
+                <h1 class="mb-4 title">Hi, I am Nadia</h1>
                 <h2 class="mb-3 front-end">Junior Front-End developer</h2>
                 <p class="mb-4 details-paragraph">
                   Enthusiastic & dedicated junior front-end developer with a
-                  strong foundation in HTML, CSS, JavaScript, and ReactJS.<br />
+                  solid foundation in HTML, CSS, JavaScript, and ReactJS.<br />
                   Eager to contribute my skills in creating visually appealing
                   and user-friendly web experiences. Always pay attention to
                   details and make sure that my code is clean. Passionate about
