--- a/Contact.html
+++ b/Contact.html
@@ -87,7 +87,7 @@
 
           <p class="second-paragraph">
             If you would like to discuss my experience and projects further,
-            please send me a message. I would love to hear from you.
+            please don't hesitate to contact me. I would love to hear from you.
           </p>
         </div>
         <div class="contact-links">
