added scroll bar new effect and scroll up as well

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <main>
       <section>
         <div class="container-box">
-          <div class="header">
+          <div class="header" id="header">
             <h3>Hi, i am</h3>
             <h1 class="developer">Nadia Bouli</h1>
             <h2>Junior Front-End Developer, based in Germany</h2>
@@ -256,6 +256,10 @@
         ><h4 class="email">De.Nadia@outlook.com</h4></a
       >
     </footer>
+    
+    <!-- Scroll Up -->
+
+    <a href="#header" class="scrollup" id="scroll-up"><i class='bx bxs-chevrons-up'></i></href>
 
     <!-- JavaScript -->
 
