added same effects on other pages as well and fixed my contact page responsiveness

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
     <!-- Main Section -->
     <main>
       <section class="container-box">
-        <h2 class="header">About Me</h2>
+        <h2 class="header" id="header">About Me</h2>
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
@@ -416,6 +416,9 @@
       >
     </footer>
 
+    <!-- Scroll Up -->
+
+    <a href="#header" class="scrollup" id="scroll-up"><i class='bx bxs-chevrons-up'></i></href>
     <!-- Java -->
 
     <script src="src/java.js"></script>
