--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
     <main>
       <section class="projects section" id="projects">
         <div class="container-box">
-          <h2 class="header">My Work</h2>
+          <h2 class="header" id="header">My Work</h2>
           <div class="projects-container swiper">
             <div class="swiper-wrapper">
               <!-- project 1 -->
@@ -306,7 +306,9 @@
         ><h4 class="email">De.Nadia@outlook.com</h4></a
       >
     </footer>
+<!-- Scroll Up -->
 
+    <a href="#header" class="scrollup" id="scroll-up"><i class='bx bxs-chevrons-up'></i></href>
     <!-- JavaScript -->
     <script src="src/java.js"></script>
   </body>
